Use relational database for storage
