# src/main/kotlin/com/ryzingtitan/datalogapi/domain/sessionmetadata/dtos/SessionMetadata.kt
@@ -1,10 +1,0 @@
-package com.ryzingtitan.datalogapi.domain.sessionmetadata.dtos
-
-import java.time.Instant
-import java.util.UUID
-
-data class SessionMetadata(
-    val sessionId: UUID,
-    val startTime: Instant,
-    val endTime: Instant,
-)
